k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-axum-api
  labels:
    app: rust-axum-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rust-axum-api
  template:
    metadata:
      labels:
        app: rust-axum-api
    spec:
      containers:
      - name: rust-app
        image: ajitirto/rust-axum-api:latest
        ports:
        - containerPort: 3000 
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
