k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-axum-service
spec:
  selector:
    app: rust-axum-api
  ports:
    - protocol: TCP
      port: 80        # Port luar service
      targetPort: 3000 # Port container
  type: ClusterIP
